# star-ray

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.bat  build.sh  pyproject.toml  setup.py
applications/dep/matb2/: __init__.py  agent.py
deprecated/plugins/matb2/: setup.py
examples.dep/mousetracker/star_ray_example_mousetracker/: __init__.py
examples.dep/vacuumworld/: README.md
examples.dep/vacuumworld/star_ray_example_vacuumworld/: __init__.py
examples/matbii/: setup.py
examples/matbii/matbii/: __init__.py  avatar_web.py  matbii.svg.jinja
examples/matbii/star_ray_example_matbii/: __init__.py  action.py  agent.py  agent_matbii.py  avatar.py  avatar_web.py  const.py  matbii.svg.jinja  state.json
examples/matbii/test/: test.py
examples/mousetracker/: setup.py
examples/mousetracker/mousetracker/: __init__.py
examples/vacuumworld/: setup.py
icua2/: __init__.py
icua2/agent/: __init__.py
icua2/application/: __init__.py
icua2/environment/: __init__.py
icua2/utils/: __init__.py  logging.py
plugins/: __init__.py
plugins/matb2/: setup.py
plugins/pygame/: avatar.py
plugins/star_ray_web/: MANIFEST.in  setup.py
plugins/star_ray_xml/: setup.py
scripts/: install.sh
star_ray/: __init__.py
star_ray/agent/: __init__.py  _wrapper_agent.py  _wrapper_observations.py  action_routing.py  action_routing.py.dep  agent.py  agent_routed.py  component.py  wrapper_agent.py  wrapper_observations.py
star_ray/environment/: __init__.py  ambient.py  environment.py  schedule.py  wrapper_state.py
star_ray/event/: __init__.py  action_event.py  event.py  event_kill.py  exitevent.py  keyevent.py  mouseevent.py  observation_event.py  responseevent.py  visibilityevent.py
star_ray/plugin/: __init__.py
star_ray/pubsub/: __init__.py  _action.py  _default_publisher.py  _pubsub.py  _topic_publisher.py  _type_publisher.py
star_ray/typing/: __init__.py
star_ray/ui/: __init__.py  window_configuration.py
star_ray/utils/: __init__.py  _async.py  _cls_utils.py  _dict_observer.py  _logging.py  _templating.py  _types.py  _utils.py  _uuid.py  cls_utils.py  dict_observer.py  dict_utils.py  error.py  literal_eval.py  logging.py  type_routing.py
test/: temp.py  test.py  test_.py  test_blinker.py  test_matb2.py  test_schedule.py  test_schedule_eval.py  test_subscribe_action.py  test_sync_async_remote.py
test/dep/: test_subscribe_action.py
test/prototyping/: test_active_agent.py  test_jinja.py  test_matb2.py  test_passive_agent.py  test_ray.py  test_super_funwrap.py  test_svg_render.py  test_template_lxml.py
test/test_component/: test_attempt.py  test_on_awake.py
test/test_environment/: test_environment_local.py  test_environment_remote.py
test/unittest/: test_action_source.py  test_agent.py  test_agent_routed.py  test_attempt.py  test_component.py  test_observe.py  test_type_publisher.py  test_type_routing.py
(+179 files in other folders)
